--- a/devices.yaml
+++ b/devices.yaml
@@ -1,6 +1,6 @@
-devices:
-  DCA-Spine1: "10.10.10.101"
-  DCA-Spine2: "10.10.10.102"
-  DCA-Leaf1: "10.10.10.201"
-  DCA-Leaf2: "10.10.10.202"
-  DCA-BL: "10.10.10.203"
+DCA-Spine1: "10.255.255.101"
+DCA-Spine2: "10.255.255.102"
+DCA-Leaf1: "10.255.255.201"
+DCA-Leaf2: "10.255.255.202"
+DCA-BL1: "10.255.255.203"
+DCA-BL2: "10.255.255.204"
